--- a/config/app_config.yml
+++ b/config/app_config.yml
@@ -8,10 +8,10 @@ development:
   paypal_standard_url: "https://www.sandbox.paypal.com/cgi-bin/webscr"
   paypal_receiver_email: "store_1233166355_biz@thirdmode.com"
   paypal_cert_id: K8LH9JVM2JHXC
-  paypal_ipn_url: "https://store/paypal/notify"
-  paypal_callback_url: "https://store/paypal/update"
-  paypal_return_url: "https://store/paypal/express_confirm"
-  paypal_cancel_url: "https://store/paypal/express_cancel"
+  paypal_ipn_url: "https://phobos.thirdmode.com/paypal/notify"
+  paypal_callback_url: "https://phobos.thirdmode.com/paypal/update"
+  paypal_return_url: "https://phobos.thirdmode.com/paypal/express_confirm"
+  paypal_cancel_url: "https://phobos.thirdmode.com//paypal/express_cancel"
   braintree_url: "https://secure.braintreepaymentgateway.com/api/transact.php"
   braintree_key: "UVgCejU48ANga4mKF77WFXfm2yUve76W"
   braintree_key_id: "776320"
