added paypal stanzas to app_config for production

--- a/config/app_config.yml
+++ b/config/app_config.yml
@@ -1,8 +1,8 @@
 development:
+  paypal_api_mode: "sandbox"
   paypal_api_username: "store_1233166355_biz_api1.thirdmode.com"
   paypal_api_password: "1233166361"
   paypal_api_signature: "ALZ2S3NXdLgg9g1ENcUy0awyGQAfAQk88a4VgQF0kt2yFDbnZ9SZjIAw"
-  paypal_api_mode: "sandbox"
   paypal_api_secret: s5a8l4a9
   paypal_express_payment_action: "Authorization"
   paypal_standard_url: "https://www.sandbox.paypal.com/cgi-bin/webscr"
@@ -12,6 +12,7 @@ development:
   paypal_callback_url: "https://phobos.thirdmode.com/paypal/update"
   paypal_return_url: "https://phobos.thirdmode.com/paypal/express_confirm"
   paypal_cancel_url: "https://phobos.thirdmode.com//paypal/express_cancel"
+
   braintree_url: "https://secure.braintreepaymentgateway.com/api/transact.php"
   braintree_key: "UVgCejU48ANga4mKF77WFXfm2yUve76W"
   braintree_key_id: "776320"
@@ -23,10 +24,12 @@ development:
   ups_password: aviva0527
 
 test:
+  paypal_api_mode: "test"
   paypal_email: test@example.com
   paypal_secret: testsecret
   paypal_cert_id: 123456789
   paypal_url: testpaypalurl
+
   braintree_url: "https://secure.braintreepaymentgateway.com/api/transact.php"
   braintree_key: "UVgCejU48ANga4mKF77WFXfm2yUve76W"
   braintree_key_id: "776320"
@@ -38,10 +41,20 @@ test:
   ups_password: aviva0527
 
 production:
-  paypal_email: foo@example.com
-  paypal_secret: supersecret
-  paypal_cert_id: UZJCVAZZVDCYL 
-  paypal_url: "https://www.paypal.com/cgi-bin/webscr"
+  paypal_api_mode: "live"
+  paypal_api_username: "store_1233166355_biz_api1.thirdmode.com"
+  paypal_api_password: "1233166361"
+  paypal_api_signature: "ALZ2S3NXdLgg9g1ENcUy0awyGQAfAQk88a4VgQF0kt2yFDbnZ9SZjIAw"
+  paypal_api_secret: s5a8l4a9
+  paypal_express_payment_action: "Authorization"
+  paypal_standard_url: "https://www.sandbox.paypal.com/cgi-bin/webscr"
+  paypal_receiver_email: "store_1233166355_biz@thirdmode.com"
+  paypal_cert_id: UZJCVAZZVDCYL
+  paypal_ipn_url: "https://phobos.thirdmode.com/paypal/notify"
+  paypal_callback_url: "https://phobos.thirdmode.com/paypal/update"
+  paypal_return_url: "https://phobos.thirdmode.com/paypal/express_confirm"
+  paypal_cancel_url: "https://phobos.thirdmode.com//paypal/express_cancel"
+
   braintree_url: "https://secure.braintreepaymentgateway.com/api/transact.php"
   braintree_username: "testapi"
   braintree_password: "password1"
